# LoraSensor

./: .gitignore
.github/workflows/: build.yml  release.yml
Board/LoraSensor/: LoraSensor-B_Cu.gbl  LoraSensor-B_Mask.gbs  LoraSensor-B_Paste.gbp  LoraSensor-B_Silkscreen.gbo  LoraSensor-Edge_Cuts.gm1  LoraSensor-F_Cu.gtl  LoraSensor-F_Mask.gts  LoraSensor-F_Paste.gtp  LoraSensor-F_Silkscreen.gto  LoraSensor-job.gbrjob  LoraSensor.drl  LoraSensor.kicad_pcb  LoraSensor.kicad_prl  LoraSensor.kicad_pro  LoraSensor.kicad_sch  LoraSensor.kicad_sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
Board/LoraSensor/Symbols/: 2450AT18A100E_JOT.kicad_sym  2450AT18A100E_JOT.step  532614002.dcm  532614002.kicad_mod  532614002.kicad_sym  532614002.stp  532614003.kicad_sym  532614003.stp  ANT-868-USP410.STEP  TPS7A2633.kicad_sym
Board/LoraSensor/Symbols/footprints.pretty/: 2450AT18A100E_JOT-L.kicad_mod  2450AT18A100E_JOT-M.kicad_mod  2450AT18A100E_JOT.kicad_mod  532614002.kicad_mod  (+8 more)
Box/: Box-Body.step  Box.FCStd  BoxAssembly.FCStd  Pcb.FCStd
Firmware/LoraSensor/: .clang-format  CLAUDE.md  CMakeLists.txt  LoraSensor.code-workspace  README.md  TODO.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
Firmware/LoraSensor/.devcontainer/: Dockerfile
Firmware/LoraSensor/main/: CMakeLists.txt  EspHal.cpp  EspHal.h  LoraClient.cpp  LoraClient.h  adc.cpp  adc.h  config.h  elapsedMillis.h  helpers.h  idf_component.yml  main.cpp  otaClient.cpp  otaClient.h  settings.cpp  settings.h  wifiClient.cpp  wifiClient.h
Firmware/LoraSensor/main/SHTC3/: SHTC3.cpp  SHTC3.h
(+3 files in other folders)
